--- a/01.md
+++ b/01.md
@@ -1,4 +1,4 @@
-[tle: software-developme](00.html) | [Top](index.html) | [ The Increment ](02.html)
+[Introduction](00.html) | [Top](index.html) | [ The Increment ](02.html)
 
 # Core of Book #
 
@@ -6,7 +6,7 @@ Some introductory remarks …
 
 
 
-[tle: software-developme](00.html) | [Top](index.html) | [ The Increment ](02.html)
+[Introduction](00.html) | [Top](index.html) | [ The Increment ](02.html)
 
 
 ## Confidence ##  
