--- a/01.md
+++ b/01.md
@@ -9,14 +9,6 @@ Some introductory remarks …
 [Introduction](00.html) | [Top](index.html) | [ The Increment ](02.html)
 
 
-## Confidence ##  
-
-### Needs ###  
-
-### Requirements ###  
-
-### Specifications ###  
-
-### Testing ###
+<!--ignore-->
 
 
