--- a/02.md
+++ b/02.md
@@ -79,14 +79,6 @@ Ship on demand.
 [Core of Book](01.html) | [Top](index.html) | [ Conversation ](03.html)
 
 
-## Confidence ##  
-
-### Needs ###  
-
-### Requirements ###  
-
-### Specifications ###  
-
-### Testing ###
+<!--ignore-->
 
 
