--- a/03.md
+++ b/03.md
@@ -23,14 +23,6 @@ With the software increment in hand, we have the ability to change the conversat
 [ The Increment ](02.html) | [Top](index.html) | [ Teams ](04.html)
 
 
-## Confidence ##  
-
-### Needs ###  
-
-### Requirements ###  
-
-### Specifications ###  
-
-### Testing ###
+<!--ignore-->
 
 
