--- a/04.md
+++ b/04.md
@@ -13,14 +13,6 @@
 [ Conversation ](03.html) | [Top](index.html) | [ Managing The Future ](05.html)
 
 
-## Confidence ##  
-
-### Needs ###  
-
-### Requirements ###  
-
-### Specifications ###  
-
-### Testing ###
+<!--ignore-->
 
 
