--- a/05.md
+++ b/05.md
@@ -1,4 +1,4 @@
-[ Teams ](04.html) | [Top](index.html) | 
+[ Teams ](04.html) | [Top](index.html) | [ Confidence ](06.html)
 
 ## Managing The Future ##  
 
@@ -10,17 +10,9 @@
 
 
 
-[ Teams ](04.html) | [Top](index.html) | 
+[ Teams ](04.html) | [Top](index.html) | [ Confidence ](06.html)
 
 
-## Confidence ##  
-
-### Needs ###  
-
-### Requirements ###  
-
-### Specifications ###  
-
-### Testing ###
+<!--ignore-->
 
 
