--- a/06.md
+++ b/06.md
@@ -1,4 +1,4 @@
-[ Managing The Future ](05.html) | [Top](index.html) | 
+[ Managing The Future ](05.html) | [Top](index.html) | [Manifesto-Driven](07.html)
 
 ## Confidence ##  
 
@@ -11,7 +11,8 @@
 ### Testing ###
 
 
-[ Managing The Future ](05.html) | [Top](index.html) | 
+
+[ Managing The Future ](05.html) | [Top](index.html) | [Manifesto-Driven](07.html)
 
 
 <!--ignore-->
