--- a/06.md
+++ b/06.md
@@ -1,4 +1,4 @@
-[ Managing The Future ](05.html) | [Top](index.html) | [Manifesto-Driven](07.html)
+[## Managing The Future ##](05.html) | [Top](index.html) | [# Manifesto-Driven #](07.html)
 
 ## Confidence ##  
 
@@ -12,7 +12,7 @@
 
 
 
-[ Managing The Future ](05.html) | [Top](index.html) | [Manifesto-Driven](07.html)
+[## Managing The Future ##](05.html) | [Top](index.html) | [# Manifesto-Driven #](07.html)
 
 
 <!--ignore-->
