--- a/07.md
+++ b/07.md
@@ -1,4 +1,4 @@
-[ Confidence ](06.html) | [Top](index.html) | 
+[## Confidence ##](06.html) | [Top](index.html) | 
 
 # Manifesto-Driven #  
 
@@ -81,7 +81,7 @@ That’s not to say that we’re opposed to control. Not at all: control, especi
 ## t-shaped paint-dripped ##
 
 
-[ Confidence ](06.html) | [Top](index.html) | 
+[## Confidence ##](06.html) | [Top](index.html) | 
 
 
 <!--ignore-->
