--- a/02.md
+++ b/02.md
@@ -1,4 +1,4 @@
-[# Core of Book](01.html) | [Top](index.html) | [## Conversation](03.html)
+[Core of Book](01.html) | [Top](index.html) | [Conversation](03.html)
 
 ## The Increment ##
 
@@ -60,7 +60,7 @@ Ship on demand.
 
 
 
-[# Core of Book](01.html) | [Top](index.html) | [## Conversation](03.html)
+[Core of Book](01.html) | [Top](index.html) | [Conversation](03.html)
 
 
 <!--ignore-->
