--- a/03.md
+++ b/03.md
@@ -1,4 +1,4 @@
-[## The Increment](02.html) | [Top](index.html) | [## Teams](04.html)
+[The Increment](02.html) | [Top](index.html) | [Teams](04.html)
 
 ## Conversation ##  
 
@@ -16,7 +16,7 @@ With the software increment in hand, we have the ability to change the conversat
 
 
 
-[## The Increment](02.html) | [Top](index.html) | [## Teams](04.html)
+[The Increment](02.html) | [Top](index.html) | [Teams](04.html)
 
 
 <!--ignore-->
