--- a/04.md
+++ b/04.md
@@ -1,4 +1,4 @@
-[## Conversation](03.html) | [Top](index.html) | [## Managing The Future](05.html)
+[Conversation](03.html) | [Top](index.html) | [Managing The Future](05.html)
 
 ## Teams ##  
 
@@ -10,7 +10,7 @@
 
 
 
-[## Conversation](03.html) | [Top](index.html) | [## Managing The Future](05.html)
+[Conversation](03.html) | [Top](index.html) | [Managing The Future](05.html)
 
 
 <!--ignore-->
