--- a/05.md
+++ b/05.md
@@ -1,16 +1,16 @@
-[Teams](04.html) | [Top](index.html) | [Confidence](06.html)
+[Conversation](04.html) | [Top](index.html) | [Managing The Future](06.html)
 
-## Managing The Future ##  
-
-  
+## Teams ##  
 
   
 
+  
 
 
 
 
-[Teams](04.html) | [Top](index.html) | [Confidence](06.html)
+
+[Conversation](04.html) | [Top](index.html) | [Managing The Future](06.html)
 
 
 <!--ignore-->
