--- a/06.md
+++ b/06.md
@@ -1,8 +1,6 @@
-[Managing The Future](05.html) | [Top](index.html) | [Manifesto-Driven](07.html)
+[Teams](05.html) | [Top](index.html) | [Confidence](07.html)
 
-## Confidence ##  
-
-  
+## Managing The Future ##  
 
   
 
@@ -12,7 +10,7 @@
 
 
 
-[Managing The Future](05.html) | [Top](index.html) | [Manifesto-Driven](07.html)
+[Teams](05.html) | [Top](index.html) | [Confidence](07.html)
 
 
 <!--ignore-->
