--- a/05.md
+++ b/05.md
@@ -1,16 +1,22 @@
-[Conversation](04.html) | [Top](index.html) | [Managing The Future](06.html)
+[The Increment](04.html) | [Top](index.html) | [Teams](06.html)
 
-## Teams ##  
+## Conversation ##  
+
+Too often in software development, we have nothing really to show for a long time. We’re working on infrastructure, or we’re working on many features at once, or in some other fashion that means it can be weeks, or quite often months before we have anything that looks like the product they’re asking us for.
+
+Our managers and stakeholders, unable to see any progress that they understand, become justly concerned that they can’t do their job, which is to be aware of the effort’s status and to guide it to success. In the absence of information, they ask us questions we can’t answer, and it’s perfectly natural to ask us to go faster. What they’re really asking is for us to move faster to show them something they understand.
+
+Our job is to produce something they can understand: The Increment.  
+
+With the software increment in hand, we have the ability to change the conversation from one based on worry, concern, and pressure, to one based on reality and on opportunity. Let’s look at some examples.  
 
   
 
-  
 
 
 
 
-
-[Conversation](04.html) | [Top](index.html) | [Managing The Future](06.html)
+[The Increment](04.html) | [Top](index.html) | [Teams](06.html)
 
 
 <!--ignore-->
