--- a/06.md
+++ b/06.md
@@ -1,16 +1,16 @@
-[Teams](05.html) | [Top](index.html) | [Confidence](07.html)
+[Conversation](05.html) | [Top](index.html) | [Managing The Future](07.html)
 
-## Managing The Future ##  
-
-  
+## Teams ##  
 
   
 
+  
 
 
 
 
-[Teams](05.html) | [Top](index.html) | [Confidence](07.html)
+
+[Conversation](05.html) | [Top](index.html) | [Managing The Future](07.html)
 
 
 <!--ignore-->
