--- a/07.md
+++ b/07.md
@@ -1,8 +1,6 @@
-[Managing The Future](06.html) | [Top](index.html) | 
+[Teams](06.html) | [Top](index.html) | [Confidence](08.html)
 
-## Confidence ##  
-
-  
+## Managing The Future ##  
 
   
 
@@ -11,7 +9,8 @@
 
 
 
-[Managing The Future](06.html) | [Top](index.html) | 
+
+[Teams](06.html) | [Top](index.html) | [Confidence](08.html)
 
 
 <!--ignore-->
