author title on toc page

--- a/01.md
+++ b/01.md
@@ -1,4 +1,4 @@
-[Table of Contents](00.html) | [Top](index.html) | [Manifesto-Driven](02.html)
+[Software Development](00.html) | [Top](index.html) | [Manifesto-Driven](02.html)
 
 # Introduction #
 
@@ -14,7 +14,7 @@ I’be been involved in building software for over a half a century, and this is
 
 
 
-[Table of Contents](00.html) | [Top](index.html) | [Manifesto-Driven](02.html)
+[Software Development](00.html) | [Top](index.html) | [Manifesto-Driven](02.html)
 
 
 <!--ignore-->
