--- a/02.md
+++ b/02.md
@@ -1,4 +1,4 @@
-[Introduction](01.html) | [Top](index.html) | [Core of Book](03.html)
+[Introduction](01.html) | [Top](index.html) | [purpose, autonomy, mastery](03.html)
 
 # Manifesto-Driven #
 
@@ -60,23 +60,11 @@ As we dig into how software should be done (according to me), we’ll keep this 
 
   
 
-  
-
-  
-
-  
-
-  
-
-  
-
-  
 
 
 
 
-
-[Introduction](01.html) | [Top](index.html) | [Core of Book](03.html)
+[Introduction](01.html) | [Top](index.html) | [purpose, autonomy, mastery](03.html)
 
 
 <!--ignore-->
