--- a/03.md
+++ b/03.md
@@ -1,12 +1,24 @@
-[Manifesto-Driven](02.html) | [Top](index.html) | [The Increment](04.html)
+[Manifesto-Driven](02.html) | [Top](index.html) | [Core of Book](04.html)
 
-# Core of Book #
+## purpose, autonomy, mastery ##
 
-Some introductory remarks …
+In his book, Drive, Daniel Pink speaks of Purpose, Autonomy, and Mastery as the foundation of both productivity and satisfaction. Those ideas make great sense to me, as I have always been more motivated by those things than by mere money. My ideas here, and in all my writings, are shaped by my own feelings, of course, and these three terms are one good way of describing how I got here.  
+
+  
+
+  
+
+  
+
+  
+
+  
 
 
 
-[Manifesto-Driven](02.html) | [Top](index.html) | [The Increment](04.html)
+
+
+[Manifesto-Driven](02.html) | [Top](index.html) | [Core of Book](04.html)
 
 
 <!--ignore-->
