--- a/08.md
+++ b/08.md
@@ -1,8 +1,6 @@
-[Managing The Future](07.html) | [Top](index.html) | 
+[Teams](07.html) | [Top](index.html) | [Confidence](09.html)
 
-## Confidence ##  
-
-  
+## Managing The Future ##  
 
   
 
@@ -11,7 +9,8 @@
 
 
 
-[Managing The Future](07.html) | [Top](index.html) | 
+
+[Teams](07.html) | [Top](index.html) | [Confidence](09.html)
 
 
 <!--ignore-->
