--- a/07.md
+++ b/07.md
@@ -1,16 +1,16 @@
-[Teams](06.html) | [Top](index.html) | [Confidence](08.html)
+[Conversation](06.html) | [Top](index.html) | [Managing The Future](08.html)
 
-## Managing The Future ##  
-
-  
+## Teams ##  
 
   
 
+  
 
 
 
 
-[Teams](06.html) | [Top](index.html) | [Confidence](08.html)
+
+[Conversation](06.html) | [Top](index.html) | [Managing The Future](08.html)
 
 
 <!--ignore-->
