--- a/03.md
+++ b/03.md
@@ -1,24 +1,26 @@
-[Manifesto-Driven](02.html) | [Top](index.html) | [Core of Book](04.html)
+[Manifesto-Driven](02.html) | [Top](index.html) | [further values](04.html)
 
 ## purpose, autonomy, mastery ##
 
 In his book, Drive, Daniel Pink speaks of Purpose, Autonomy, and Mastery as the foundation of both productivity and satisfaction. Those ideas make great sense to me, as I have always been more motivated by those things than by mere money. My ideas here, and in all my writings, are shaped by my own feelings, of course, and these three terms are one good way of describing how I got here.  
 
-  
+Ideally, we should get a sense of purpose from the product we’re working on. While it’s true that we might just be showing up at work so they’ll keep paying us, things will go better for us, and for the business, if we get a sense of importance from what we’re doing. This has some important implications for how we approach software development. I’ll touch on two here, the way work is divided up, and our connection with those who need what we’re doing.
 
-  
+Because people work more effectively and more happily with a sense of purpose, we should partition the work so that its purpose is clear to the people doing it. We should be able to look at the flow of things we’re trying to create and see that there is a point to it. It’s often better to work on a feature than on a subroutine, because it’s easier to see how it all makes sense.
 
-  
+One of the best ways to see purpose, is to work with the people who actually need the solution we’re creating. A half-decent way to do that, and often the only one accessible to us, is to have a business person with product responsibility as part of our team. A better way is to have a team with a real connection to some of the users of whatever is being built. We’ll also get a better product, the more closely we connect with the real purpose of the work.  
 
-  
+Given an understanding of what is needed, a purpose, we need to have a hand in serving that purpose. The stronger hand we have, the better. If we’re just handed parceled out work, but we can see how it fits in, that’s at least better than if we can’t even see the point. But if we get to influence the order of the work to maximize value, we’ll feel and perform better. To the extent that we’re part of deciding how to solve the need, we’ll do even better.  
 
-  
+Given a purpose, and the autonomy to address it, we want to be able to perform well. We want to build a good solution, not a poor one. We want to build an attractive, useful, high quality, all good things solution. To do that, we need to be good at our job.
+
+We need to be able to assess user needs. We need to devise solutions. We need to see when a solution is good and when it is better. We need to be able to compare the value of solutions, to see the quality of our designs, to build code that is functional and maintainable. We need to do good work.  
+
+Throughout this book, I’ll be consciously shaping the recommendations to increase purpose, autonomy, and mastery. From time to time, I’ll refer back to those ideas. And, very likely, the ideas here will be shaped more subtly by my own desire for those three values. Watch for those cases as well.
 
 
 
-
-
-[Manifesto-Driven](02.html) | [Top](index.html) | [Core of Book](04.html)
+[Manifesto-Driven](02.html) | [Top](index.html) | [further values](04.html)
 
 
 <!--ignore-->
