--- a/04.md
+++ b/04.md
@@ -1,12 +1,38 @@
-[purpose, autonomy, mastery](03.html) | [Top](index.html) | [The Increment](05.html)
+[purpose, autonomy, mastery](03.html) | [Top](index.html) | [Core of Book](05.html)
 
-# Core of Book #
+## further values ##
 
-Some introductory remarks …
+There are, of course, many important values that we might hold, and that might inform the decisions we make. I’ll list a few here that have appeal to me, and that I’d invite you to think about.  
+
+My colleague Mike (GeePaw) Hill offers two additional values, one of which is safety. For people to be effective, they need to be able to have ideas, make mistakes, try things, and learn. If they feel safe in their work, they can do these things. If they do not feel safe, they’ll behave conservatively, even defensively, and creativity will suffer. Very likely, even teamwork will suffer, as people close in, and hold resources to themselves in fear that they may lose out somehow.
+
+It seems to me that safety is somewhat subsumed under the notion of autonomy, but not entirely. We might, in principle, be free to act but the consequences of mistakes would be so dire that we’d be acting only out of fear. That would be bad.
+
+Safety is important, and it needs to be real. If we tell people that they’re safe, and they’re not, they’ll quickly find out, and things will be worse than before. So GeePaw is wise to include this value.  
+
+GeePaw Hill also offers the value of “rhythm”. He points out that people seem to work better within regular rhythmic time cycles. We tend to like going to work at the same time, eating our meals at the same time, and so on. It is this sense of rhythmic cycles that results in suggestions that our development process might best have weekly or biweekly iterations, monthly and daily meetings, and so on.   
+
+Clearly, the more different ideas we have, the better we’ll be able to pick out really good ideas–at least within reason. It’s certainly possible to have too many ideas, or too many weird ideas, but by and large, my experience is that a few more good ideas would have been useful.
+
+We want to avoid “groupthink”, where everyone is so much on the same page that we don’t see new opportunities or new solutions. And there’s very little doubt that having a more diverse team can help. What kind of diversity? Again, within reason, all kinds: age, gender, race, origin, background, and so on. 
+
+There’s another reason why we might want to have our organization be more diverse, and it’s a reason that appeals to me. If we are privileged enough to have work, to have an organization that can hire people and help them advance themselves, then it seems to me that we should look beyond the nearest white male for people to recruit. To some degree, we should bring in people who will contribute to our effort, and who will at the same time get a chance that they might not have otherwise had, to advance themselves.
+
+I don’t expect that we’ll be speaking directly about diversity in these pages, as I don’t think it will directly impact most of the topics I presently have in mind. Nonetheless, I think a focus on diversity is good for the company and good for humanity, and I strongly recommend it.  
+
+  
+
+  
+
+  
+
+  
 
 
 
-[purpose, autonomy, mastery](03.html) | [Top](index.html) | [The Increment](05.html)
+
+
+[purpose, autonomy, mastery](03.html) | [Top](index.html) | [Core of Book](05.html)
 
 
 <!--ignore-->
