--- a/08.md
+++ b/08.md
@@ -1,16 +1,16 @@
-[Teams](07.html) | [Top](index.html) | [Confidence](09.html)
+[Conversation](07.html) | [Top](index.html) | [Managing The Future](09.html)
 
-## Managing The Future ##  
-
-  
+## Teams ##  
 
   
 
+  
 
 
 
 
-[Teams](07.html) | [Top](index.html) | [Confidence](09.html)
+
+[Conversation](07.html) | [Top](index.html) | [Managing The Future](09.html)
 
 
 <!--ignore-->
