--- a/09.md
+++ b/09.md
@@ -1,8 +1,6 @@
-[Managing The Future](08.html) | [Top](index.html) | 
+[Teams](08.html) | [Top](index.html) | [Confidence](10.html)
 
-## Confidence ##  
-
-  
+## Managing The Future ##  
 
   
 
@@ -11,7 +9,8 @@
 
 
 
-[Managing The Future](08.html) | [Top](index.html) | 
+
+[Teams](08.html) | [Top](index.html) | [Confidence](10.html)
 
 
 <!--ignore-->
