--- a/10.md
+++ b/10.md
@@ -1,4 +1,4 @@
-[Managing The Future](09.html) | [Top](index.html) | 
+[Managing The Future](09.html) | [Top](index.html) | [Architecture and Design](11.html)
 
 ## Confidence ##  
 
@@ -11,7 +11,8 @@
 
 
 
-[Managing The Future](09.html) | [Top](index.html) | 
+
+[Managing The Future](09.html) | [Top](index.html) | [Architecture and Design](11.html)
 
 
 <!--ignore-->
