--- a/05.md
+++ b/05.md
@@ -1,4 +1,4 @@
-[further values](04.html) | [Top](index.html) | [The Increment](06.html)
+[further values](04.html) | [Top](index.html) | [Iterative and Incremental](06.html)
 
 # Core of Book #
 
@@ -6,7 +6,7 @@ Some introductory remarks …
 
 
 
-[further values](04.html) | [Top](index.html) | [The Increment](06.html)
+[further values](04.html) | [Top](index.html) | [Iterative and Incremental](06.html)
 
 
 <!--ignore-->
