--- a/06.md
+++ b/06.md
@@ -1,66 +1,34 @@
-[Core of Book](05.html) | [Top](index.html) | [Conversation](07.html)
+[Core of Book](05.html) | [Top](index.html) | [The Increment](07.html)
 
-## The Increment ##
+## Iterative and Incremental ##
 
-In my view, our best chance at successful software development comes down to this: The “*Increment*”, a frequently-provided chunk of running, tested, software, ready to ship, solid, each feature or story bit complete. It may not have all the capabilities you want, but everything it has is crisp, in place, ready to go.
+Software development approaches like Extreme Programming and Scrum can be said to be iterative and incremental.  
 
-We center our planning, our building, our assessment, our predictions, our communication, around the Increment. Most of what’s in this book will center on the Increment and our relationship with it. We’ll never be more than a step or two away from it.
+An iterative process is one that repeats a series of operations cyclically, with the intention of coming closer and closer to some desired result. In mathematics, for example, the Newton-Raphson method is used to approximate the solutions to algebraic equations. Often a direct solution of an equation is difficult to obtain: sometimes there is no known way to so. But it is often possible to approximate a solution, essentially by trying a value, and then repeatedly using that value to get a more accurate solution. If the calculation of the new approximation is easier than finding a direct solution, iteration is worth-while.
 
-Let’s look at some aspects of the Increment.  
+By analogy, approaches like XP and Scrum repeat a simple cycle of activities, producing a new increment of product in each cycle. Usually the cycle is performed in a fixed time-box, but time-boxing is not necessary to the iterative concept. However, both XP and Scrum do use a fixed time-box per iteration, while approaches focusing on more continuous flow, such as Kanban, may perform a consistent cycle of steps, but in the “time required” rather than a fixed time-box. 
 
-I say that the increment is made of running, tested, software. By “running”, I mean that it’s working, capable of being used and demonstrated. It’s integrated, with all its components assembled together. It’s ready to go. We could hand someone a copy, or point them at the URL, or let them load up the app. However it’s to be delivered, we have it in that form, and people can touch it, hold it, use it, assess it, just as if it were the “final” version.  
+Xp refers to the cycle’s time period as an “Iteration”, while Scrum calls it a “Sprint”. The cycles themselves are similar. In a time-box of a week or two, the team plans what they’ll accomplish in the time period. They do the work, then review it and consider how to improve the work, and the way they work, next time around. Each iteration of the cycle is therefore similar to the preceding one, but not identical. The specific work changes, of course, but we also improve how we approach the work.
 
-I say that the Increment is “tested”. I could just as well say “working, really truly provably working”, but it wouldn’t scan. The point is that the Increment is as close to free of defects as we want the “final” product to be, and if you expect me to use your product, that means as close to zero defects as we can get. 
+And each iteration is expected to produce an “Increment”, working, tested, usable software that meets more of the goals of the product than last time.  
 
->Pro tip: If your open defects are recorded in Jira, or in any form other than one sticky note or index card, you have too many of them. Stop adding and fix things.
-Today, the best way I know to have software that really works is extensive testing. We’ll discuss ways of doing that later on. For now, it’s got to be working, and you’ve got to be able to prove it, so that means it had better be tested.
-  
+An incremental approach to producing something can be seen as producing more and more of it each time. This is in a bit of contrast to the notion of an iterative approach, which is best viewed as producing an improved version of some targeted solution. An incremental approach produces a new thing by changing the old one.
 
-How is your product going to be deployed? Is it an App? Will it be downloaded from an App Store? Will it be shipped out on a DVD? Will it be running on a web server? Will it be running as a web client? Is it a service in the cloud?
+These ideas, together, define what “Agile” approaches like XP and Scrum are doing. They repeat a cyclic pattern of actions, producing a new version of the desired product, by changing the preceding version. Usually, those changes will consist of adding in some new capability, because we generally need more than one capability in a product before people will find it useful.   
 
-However it’s going to be deployed, that’s the form every Increment needs to take. If you’re going to run on AWS, then your increment needs to be running on AWS. 
+The thing we produce is called the Increment, and we’ll discuss it in detail in another section. We’ll make a few points here. 
 
-Shippable means that if by some strange chance your managers, your product people, or some user said “Hey, we could use this”, all you have to do is say “OK” and let them use it. It’s truly ready to go.
+First, the Increment should always be fully tested and operational. The only thing about it that could be “not ready to go” would be that it lacks some necessary capability to be useful. Presumably, the next thing we’ll do will be to add that capability. Other than that, it should be ready to ship. In fact, the best thing about it is that it’s ready to ship. The idea is to have it be irresistibly tempting to give the Increment to someone to use.
 
-The only thing holding you back from release should be …  
+Second, while we usually improve the increment by adding capability, that doesn’t mean we never remove anything or never make a less visible improvement. A good use of an incremental development approach is to try things. We put in a capability, let a few people try it, and learn. Next time, we might remove that capability, or that way of providing it, and put in another. Similarly, we might improve efficiency or some other less visible characteristic of the product. The idea, simply enough, is that we improve it every time around.  
 
-Features. Capabilities. Stories. Call them what you want, the point of building software is so that it can do stuff. In early days, our product won’t have every capability we have in mind. (I hope it never does. Some of our ideas are incredibly stupid!) In early days, it may not have enough to be quite usable at all.
+There you have it. The approaches we prefer are iterative, in that they consist of short cycles of development, generally done in a self-similar style, with improvements. They are incremental, in that they produce an Increment of product each time around, each Increment being ready to ship, and better than the one before.
 
-The only thing that should hold us back from putting our software in the hands of its users is that it Is a bit shy of features.
-
-And the sooner we put in a couple of those missing features, the sooner we can ship it, and the sooner we are getting real feedback while our users are getting real value.  
-
-The point of the Increment, the point of “running tested features” is to focus all our planning and reporting around a thing that exists, a thing whose only reason for not being out there creating value is that it lacks a few critical features. The idea is to make the product so tangible that it gets us thinking:
-
-If we just added this one more thing, we could ship this puppy!
-
-If you can do what we’ve said so far, you’re ready to go. The rest is hints, guidance, examples. Valuable, we certainly hope. But the core is the Increment, running, tested, features.  
-
-The so-called “Agile” method inaccurately named “SAFe” has the notion of “Deliver on Cadence, Ship on Demand”. This is not a bad idea. It means that one should be showing tangible results at regular intervals, and should always be ready to ship. (It appears that SAFe’s definition of ready to ship and mine may be different. I mean ready right now, here, take this, it’s good to go.)
-
-But it’s good advice, just not good enough. The advice here is:
-
-Deliver continuously, ship on demand.  
-
-In the early days of “Agile”, over two decades ago, we thought that having a version ready every month was OK, three weeks was good, two weeks was amazing. Ready every week? You must be gods!
-
-The younger Agile generation showed us how to do it. Their products are integrated all the time. Automatic build and test runs every time anyone commits a change, and they commit changes daily, every half-day, four times a day … even every few minutes.
-
-If you change a line of code and the system will still work, maybe a little better, why not deliver it, at least to your colleagues if not to the world? 
-
-Deliver continuously.  
-
-Suppose someone wants to use the software. Suppose they want that fix you just put in and committed a couple of paragraphs above? How long should they have to wait?
-
-Zero time would be good. Time to download a new version would be OK. Any delay longer than that isn’t good enough. We have to ask ourselves why we wouldn’t give them the version that just left our fingertips. The usual reason is that we aren’t sure it works.
-
-Well, let’s be sure it works. That’s what “tested” means. And since it works, there’s no reason to hold back. When someone wants it:
-
-Ship on demand.
+Iterative and incremental: smooth, consistent, producing usable results. That’s how I’d do software.
 
 
 
-[Core of Book](05.html) | [Top](index.html) | [Conversation](07.html)
+[Core of Book](05.html) | [Top](index.html) | [The Increment](07.html)
 
 
 <!--ignore-->
