--- a/09.md
+++ b/09.md
@@ -1,16 +1,16 @@
-[Teams](08.html) | [Top](index.html) | [Confidence](10.html)
+[Conversation](08.html) | [Top](index.html) | [Managing The Future](10.html)
 
-## Managing The Future ##  
-
-  
+## Teams ##  
 
   
 
+  
 
 
 
 
-[Teams](08.html) | [Top](index.html) | [Confidence](10.html)
+
+[Conversation](08.html) | [Top](index.html) | [Managing The Future](10.html)
 
 
 <!--ignore-->
