--- a/10.md
+++ b/10.md
@@ -1,8 +1,6 @@
-[Managing The Future](09.html) | [Top](index.html) | [Architecture and Design](11.html)
+[Teams](09.html) | [Top](index.html) | [Confidence](11.html)
 
-## Confidence ##  
-
-  
+## Managing The Future ##  
 
   
 
@@ -12,7 +10,7 @@
 
 
 
-[Managing The Future](09.html) | [Top](index.html) | [Architecture and Design](11.html)
+[Teams](09.html) | [Top](index.html) | [Confidence](11.html)
 
 
 <!--ignore-->
